🔨 Refact: Structure that separates different architectures.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "rustflags",
         "Tkernel",
         "Cforce",
+        "riscv",
         "riscv64gc-unknown-none-elf",
         "cafs",
         "libc",
