--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Tkernel",
         "Cforce",
         "riscv",
+        "aarch",
         "riscv64gc-unknown-none-elf",
         "cafs",
         "libc",
