--- a/canicula-libs/Cargo.toml
+++ b/canicula-libs/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "libc"
+name = "canicula-libs"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "libc"
-path = "src/libc.rs"
+name = "canicula_libs"
+path = "src/libs.rs"
 
 [dependencies]
