✨ Feat: Add build-time code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
         "./canicula-libs/Cargo.toml",
     ],
     "cSpell.words": [
+        "rustc",
+        "rustup",
+        "builtins",
         "rustflags",
         "Tkernel",
         "Cforce",
