✨ Feat: Add code to boot with UEFI in x86.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "cafs",
         "libc",
         "uefi",
+        "bootloader",
         /* ELF HEADER */
         "e_phoff",
         "e_shoff",
