--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Does not come with compiled products.
 /target
 
+# EFI files
+/esp
+
 # This file is the rustsbi startup image of qemu and needs to be downloaded by the user.
 rustsbi-qemu.bin
