--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "canicula-efi",
-    "canicula-fs",
-    "canicula-kernel",
-    "canicula-libs",
-]
+members = ["canicula-efi", "canicula-fs", "canicula-kernel", "canicula-libs"]
 
 [profile.release]
 debug = true
