--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -9,7 +9,10 @@ path = "src/main.rs"
 
 [dependencies]
 log = "0.4"
-lazy_static = { version = "1.4.0", features = ["spin_no_std"]  }
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+
+[target.x86_64-unknown-none.dependencies]
+bootloader_api = "0.11.7"
 
 [target.riscv64gc-unknown-none-elf.dependencies]
 sbi-rt = { version = "0.0.3", features = ["legacy"] }
