--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,9 @@
     "rust-analyzer.checkOnSave.target": "x86_64-unknown-none",
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
+        "./canicula-common/Cargo.toml",
         "./canicula-efi/Cargo.toml",
-        "./canicula-fs/Cargo.toml",
+        "./canicula-ext4/Cargo.toml",
         "./canicula-kernel/Cargo.toml",
         "./canicula-libs/Cargo.toml",
     ],
