--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 resolver = "2"
-members = ["canicula-efi", "canicula-fs", "canicula-kernel", "canicula-libs"]
+members = [
+    "canicula-common",
+    "canicula-efi",
+    "canicula-ext4",
+    "canicula-kernel",
+    "canicula-libs",
+]
 
 [profile.release]
 debug = true
