--- a/canicula-ext4/.cargo/config.toml
+++ b/canicula-ext4/.cargo/config.toml
@@ -1,7 +1,5 @@
-[toolchain]
-targets = [
-    "x86_64-unknown-uefi",
-    "aarch64-unknown-uefi",
+[build]
+target = [
     "x86_64-unknown-none",
     "aarch64-unknown-none",
     "riscv64gc-unknown-none-elf",
