--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,4 +52,8 @@
         "kbytes",
         "uninit",
     ],
+    "rust-analyzer.runnables.extraArgs": [
+        "--target=x86_64-unknown-linux-gnu",
+        "-Zbuild-std=std,panic_abort",
+    ],
 }
