--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 [dependencies]
 log = "0.4"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+canicula-common = { path = "../canicula-common" }
 
 [target.x86_64-unknown-none.dependencies]
 bootloader_api = "0.11.7"
