--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,11 @@
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
 
+[target.x86_64-unknown-none]
+rustflags = [
+    "-Clink-arg=-Tcanicula-kernel/src/arch/x86/linker.ld",
+]
+
 [target.riscv64gc-unknown-none-elf]
 rustflags = [
     "-Clink-arg=-Tcanicula-kernel/src/arch/riscv64/linker.ld",
