--- a/canicula-kernel/x86_64-unknown-none.json
+++ b/canicula-kernel/x86_64-unknown-none.json
@@ -13,6 +13,6 @@
     "features": "-mmx,-sse,+soft-float",
     "panic-strategy": "abort",
     "pre-link-args": {
-      "ld.lld": ["-Tcanicula-kernel/x86_64-kernel.ld", "-export-dynamic", "-strip-all", "-z,norelro"]
+      "ld.lld": ["-Tcanicula-kernel/src/arch/x86/linker.ld", "-export-dynamic"]
     }
   }
