--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,12 @@
 [toolchain]
 profile = "default"
-# use the nightly version of the last stable toolchain, see <https://forge.rust-lang.org/>
 channel = "nightly-2024-12-17"
 components = ["rust-src", "llvm-tools-preview", "rustfmt", "clippy"]
+targets = [
+    "x86_64-unknown-uefi",
+    "aarch64-unknown-uefi",
+    "x86_64-unknown-none",
+    "aarch64-unknown-none",
+    "riscv64gc-unknown-none-elf",
+    "x86_64-unknown-linux-gnu",
+]
