--- a/canicula-efi/Cargo.toml
+++ b/canicula-efi/Cargo.toml
@@ -9,8 +9,11 @@ path = "src/efi.rs"
 
 [dependencies]
 log = "0.4"
+uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }
+canicula-common = { path = "../canicula-common" }
+
+[target.x86_64-unknown-uefi.dependencies]
 x86_64 = "0.15.2"
 xmas-elf = "0.9.1"
-uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }
 
-canicula-common = { path = "../canicula-common" }
+[target.aarch64-unknown-uefi.dependencies]
