--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,29 @@
 [workspace]
 resolver = "2"
 members = [
+    "bootloader/uefi",
+    "bootloader/api",
+    "bootloader/common",
+    "bootloader/common/config",
+
     "canicula-common",
     "canicula-efi",
     "canicula-ext4",
     "canicula-kernel",
     "canicula-libs",
 ]
+
+[workspace.dependencies]
+bootloader_api = { version = "0.11.8", path = "bootloader/api" }
+bootloader-x86_64-common = { version = "0.11.8", path = "bootloader/common" }
+bootloader-boot-config = { version = "0.11.8", path = "bootloader/common/config" }
+bootloader-x86_64-bios-common = { version = "0.11.8", path = "bootloader/bios/common" }
+
+[workspace.package]
+version = "0.11.8"
+authors = ["hanbings hanbings@hanbings.io"]
+repository = "https://github.com/hanbings/canicula"
+license = "MIT"
 
 [profile.release]
 debug = true
