--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bootloader"]
 	path = bootloader
-	url = git@github.com:hanbings/bootloader.git
+	url = git@github.com:rust-osdev/bootloader.git
