--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 bootloader_api = "0.11.8"
+noto-sans-mono-bitmap = "=0.3.1"
 
 [target.x86_64-unknown-none.dependencies]
 
