--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -8,10 +8,10 @@ name = "canicula-kernel"
 path = "src/main.rs"
 
 [dependencies]
+bootloader_api = "0.11.8"
+noto-sans-mono-bitmap = "=0.3.1"
 
 [target.x86_64-unknown-none.dependencies]
-bootloader_api = "0.11.7"
-canicula-common = { path = "../canicula-common" }
 
 [target.aarch64-unknown-none.dependencies]
 
