--- a/canicula-common/Cargo.toml
+++ b/canicula-common/Cargo.toml
@@ -8,6 +8,7 @@ name = "canicula_common"
 path = "src/libs.rs"
 
 [dependencies]
+noto-sans-mono-bitmap = "0.3.1"
 
 [target.x86_64-unknown-uefi.dependencies]
 uefi = { version = "0.28.0", features = ["logger", "panic_handler"] }
