--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -11,6 +11,8 @@ path = "src/main.rs"
 bootloader_api = "0.11.8"
 noto-sans-mono-bitmap = "=0.3.1"
 
+canicula-common = { path = "../canicula-common" }
+
 [target.x86_64-unknown-none.dependencies]
 
 [target.aarch64-unknown-none.dependencies]
