--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -8,12 +8,16 @@ name = "canicula-kernel"
 path = "src/main.rs"
 
 [dependencies]
+spin = "0.10.0"
 bootloader_api = "0.11.8"
 noto-sans-mono-bitmap = "=0.3.1"
 
 canicula-common = { path = "../canicula-common" }
 
 [target.x86_64-unknown-none.dependencies]
+x86_64 = "0.15.2"
+uart_16550 = "0.3.2"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 
 [target.aarch64-unknown-none.dependencies]
 
