--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -8,6 +8,7 @@ name = "canicula-kernel"
 path = "src/main.rs"
 
 [dependencies]
+log = "0.4.27"
 spin = "0.10.0"
 bootloader_api = "0.11.8"
 noto-sans-mono-bitmap = { version = "0.3.1", features = [ "font_weights_all", "raster_heights_all"] }
