✨ Feat: Add virtual memory translation capabilities to the kernel.

--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -17,6 +17,7 @@ canicula-common = { path = "../canicula-common" }
 
 [target.x86_64-unknown-none.dependencies]
 x86_64 = "0.15.2"
+pic8259 = "0.11.0"
 uart_16550 = "0.3.2"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 
