--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -16,6 +16,8 @@ noto-sans-mono-bitmap = { version = "0.3.1", features = [ "font_weights_all", "r
 canicula-common = { path = "../canicula-common" }
 
 [target.x86_64-unknown-none.dependencies]
+acpi = "5.2.0"
+x86 = "0.52.0"
 x86_64 = "0.15.2"
 pic8259 = "0.11.0"
 uart_16550 = "0.3.2"
