--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -18,8 +18,10 @@ canicula-common = { path = "../canicula-common" }
 [target.x86_64-unknown-none.dependencies]
 acpi = "5.2.0"
 x86 = "0.52.0"
+x2apic = "0.5.0"
 x86_64 = "0.15.2"
 uart_16550 = "0.3.2"
+conquer-once = { version = "0.4.0", default-features = false }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 linked_list_allocator = "0.10.5"
 
