--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -16,6 +16,7 @@ noto-sans-mono-bitmap = { version = "0.3.1", features = [ "font_weights_all", "r
 canicula-common = { path = "../canicula-common" }
 
 [target.x86_64-unknown-none.dependencies]
+aml = "0.16.4"
 acpi = "5.2.0"
 x86 = "0.52.0"
 x2apic = "0.5.0"
