--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -19,9 +19,11 @@ canicula-common = { path = "../canicula-common" }
 aml = "0.16.4"
 acpi = "5.2.0"
 x86 = "0.52.0"
+nostd = "0.1.4"
 x2apic = "0.5.0"
 x86_64 = "0.15.2"
 uart_16550 = "0.3.2"
+png-decoder = "0.1.1"
 conquer-once = { version = "0.4.0", default-features = false }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 linked_list_allocator = "0.10.5"
