--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,58 +1,14 @@
 {
-    "rust-analyzer.cargo.target": "x86_64-unknown-none",
+    "rust-analyzer.cargo.target": "x86_64-unknown-uefi",
     "rust-analyzer.checkOnSave.allTargets": false,
-    "rust-analyzer.checkOnSave.target": "x86_64-unknown-none",
+    "rust-analyzer.checkOnSave.target": "x86_64-unknown-uefi",
     "rust-analyzer.linkedProjects": [
         "./Cargo.toml",
-        "./canicula-common/Cargo.toml",
-        "./canicula-ext4/Cargo.toml",
-        "./canicula-kernel/Cargo.toml",
-        "./canicula-libs/Cargo.toml",
+        "./canicula-kernel/Cargo.toml"
     ],
-    "cSpell.words": [
-        "rustc",
-        "rustup",
-        "builtins",
-        "rustflags",
-        "Tkernel",
-        "Cforce",
-        "riscv",
-        "aarch",
-        "riscv64gc-unknown-none-elf",
-        "cafs",
-        "libc",
-        "bootloader",
-        "uefi",
-        "repr",
-        "proto",
-        "e_phoff",
-        "e_shoff",
-        "e_ehsize",
-        "e_phentsize",
-        "e_phnum",
-        "e_shentsize",
-        "e_shnum",
-        "e_shstrndx",
-        "p_vaddr",
-        "p_paddr",
-        "p_filesz",
-        "p_memsz",
-        "sh_addralign", 
-        "sh_entsize",
-        "inodes",
-        "wtime",
-        "lastcheck",
-        "checkinterval",
-        "resuid",
-        "resgid",
-        "incompat",
-        "prealloc",
-        "inum",
-        "kbytes",
-        "uninit",
-    ],
+    "cSpell.words": [],
     "rust-analyzer.runnables.extraArgs": [
-        "--target=x86_64-unknown-none",
-        "-Zbuild-std=std,panic_abort",
+        "--target=x86_64-unknown-uefi",
+        "-Zbuild-std=std,panic_abort"
     ],
 }
