--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -1,35 +1,17 @@
 [package]
 name = "canicula-kernel"
-version = "0.1.0"
-edition = "2021"
+edition = "2024"
+version.workspace = true
+authors.workspace = true
+repository.workspace = true
+license.workspace = true
 
 [[bin]]
 name = "canicula-kernel"
 path = "src/main.rs"
 
 [dependencies]
-log = "0.4.27"
-spin = "0.10.0"
-bootloader_api = "0.11.8"
-noto-sans-mono-bitmap = { version = "0.3.1", features = [ "font_weights_all", "raster_heights_all"] }
-
-canicula-common = { path = "../canicula-common" }
-
-[target.x86_64-unknown-none.dependencies]
-aml = "0.16.4"
-acpi = "5.2.0"
-x86 = "0.52.0"
-nostd = "0.1.4"
-x2apic = "0.5.0"
+log = "0.4"
 x86_64 = "0.15.2"
-uart_16550 = "0.3.2"
-png-decoder = "0.1.1"
-conquer-once = { version = "0.4.0", default-features = false }
-lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-linked_list_allocator = "0.10.5"
-
-[target.aarch64-unknown-none.dependencies]
-
-[target.riscv64gc-unknown-none-elf.dependencies]
-sbi-rt = { version = "0.0.3", features = ["legacy"] }
-riscv = "0.13.0"
+xmas-elf = "0.10.0"
+uefi = { version = "0.35.0", features = [ "panic_handler", "logger" ] }
