--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -4,5 +4,6 @@ channel = "nightly"
 components = ["rust-src", "llvm-tools-preview", "rustfmt", "clippy"]
 targets = [
     "x86_64-unknown-uefi",
-    "aarch64-unknown-uefi"
+    "aarch64-unknown-uefi",
+    "wasm32-unknown-unknown"
 ]
