--- a/canicula-efi/Cargo.toml
+++ b/canicula-efi/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "canicula-efi"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [[bin]]
 name = "canicula-efi"
