--- a/canicula-loader/Cargo.toml
+++ b/canicula-loader/Cargo.toml
@@ -8,6 +8,6 @@ license.workspace = true
 
 [dependencies]
 log = "0.4"
-x86_64 = "0.15.2"
 xmas-elf = "0.9.1"
 uefi = { version = "0.33.0", features = ["panic_handler", "logger", "alloc", "global_allocator"] }
+canicula-common = { workspace = true }
