--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # EFI files
 /esp
 
+# Linux kernel files
+vmlinuz*
+initrd.img*
+/initramfs
+
 # This file is the rustsbi startup image of qemu and needs to be downloaded by the user.
 rustsbi-qemu.bin
 
