✅ Test: Add tests for ext4 metadata.

--- a/canicula-ext4/.cargo/config.toml
+++ b/canicula-ext4/.cargo/config.toml
@@ -1,6 +1,9 @@
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
 
+[alias]
+ext4-test = "test -Zbuild-std=std,core,alloc,compiler_builtins --target x86_64-unknown-linux-gnu --package canicula-ext4 --lib -- --nocapture"
+
 [build]
 target = [
     "x86_64-unknown-none",
