--- a/canicula-kernel/Cargo.toml
+++ b/canicula-kernel/Cargo.toml
@@ -17,6 +17,10 @@ spin = "0.10.0"
 noto-sans-mono-bitmap = { workspace = true, features = ["font_weights_all", "raster_heights_all"] }
 canicula-common = { workspace = true }
 
+[features]
+svm = []
+svm_run = ["svm"]
+
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 aml = "0.16.4"
 acpi = "6.0.1"
